syntax = "proto2";

package foundation;

message ExtractedValue {
  optional string id = 1;
  optional string field_name = 2;
  optional string type = 3;
  optional bytes serialized_value = 4;
  repeated string entity_ids = 5;
}

message ExtractedValueCollection {
  optional string id = 1;
  repeated string extracted_value_ids = 2;
}