syntax = "proto2";

package foundation;

message RecordContext {
  required string id = 1;
  repeated string entity_ids = 2;
  repeated string collection_ids = 3;
  repeated string page_ids = 4;
  required string text_id = 5;
  repeated string extracted_value_ids = 6;
}